name:                adventofcode
version:             0.1.0.0
synopsis:            Advent of Code 2016
description:         Please see README.md
homepage:            https://github.com/liff/adventofcode-2016
license:             BSD3
license-file:        LICENSE
author:              Olli Helenius
maintainer:          liff@iki.fi
copyright:           2016 Olli Helenius
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall -fno-warn-missing-signatures
  build-depends:       base
                     , bytestring
                     , hex
                     , containers
                     , megaparsec
                     , cryptohash
  default-language:    Haskell2010
  other-modules:       Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6

source-repository head
  type:     git
  location: https://github.com/liff/adventofcode-2016
